// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSelect DateSelect date 1`] = `
<DateSelect
  disabled={false}
  hasArrow={true}
  minuteStep={1}
  mode="date"
  onCancel={[Function]}
  placeholder="请选择日期"
  title="选择日期"
  value={2019-04-23T00:00:00.000Z}
>
  <div
    className="za-date-select"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2019-04-23"
    />
    <div
      className="za-date-select__input"
    >
      <div
        className="za-date-select__value"
      >
        2019-04-23
      </div>
    </div>
    <div
      className="za-date-select__arrow"
    />
    <DatePicker
      maskClosable={true}
      minuteStep={1}
      mode="date"
      onCancel={[Function]}
      onConfirm={[Function]}
      onInit={[Function]}
      title="选择日期"
      value={2019-04-23T00:00:00.000Z}
      visible={false}
    >
      <Popup
        destroy={true}
        direction="bottom"
        lockScroll={true}
        mask={true}
        onMaskClick={[Function]}
        visible={false}
      >
        <Trigger
          disabled={false}
          onClose={[Function]}
          visible={false}
        >
          <Mask
            color="black"
            destroy={true}
            mountContainer={[Function]}
            onClick={[Function]}
            opacity="normal"
            visible={false}
          >
            <Transition
              destroy={true}
              nodeRef={null}
              tranisitionName="za-fade"
              visible={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={true}
                nodeRef={
                  Object {
                    "current": undefined,
                  }
                }
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                unmountOnExit={true}
              />
            </Transition>
          </Mask>
          <Transition
            destroy={true}
            nodeRef={null}
            onEnter={[Function]}
            onLeaveEnd={[Function]}
            tranisitionName="za-move-up"
            visible={false}
          >
            <Transition
              addEndListener={[Function]}
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={true}
              nodeRef={
                Object {
                  "current": undefined,
                }
              }
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              unmountOnExit={true}
            />
          </Transition>
        </Trigger>
      </Popup>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect datetime 1`] = `
<DateSelect
  defaultValue={2017-11-03T10:00:00.000Z}
  disabled={false}
  hasArrow={true}
  max={2017-11-02T09:00:00.000Z}
  min={2017-11-02T03:00:00.000Z}
  minuteStep={1}
  mode="datetime"
  onCancel={[Function]}
  placeholder="请选择时间"
  title="选择时间"
>
  <div
    className="za-date-select za-date-select--placeholder"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2022-10-25 16:48"
    />
    <div
      className="za-date-select__input"
    >
      <div
        className="za-date-select__value"
      >
        2022-10-25 16:48
      </div>
    </div>
    <div
      className="za-date-select__arrow"
    />
    <DatePicker
      defaultValue={2017-11-03T10:00:00.000Z}
      maskClosable={true}
      max={2017-11-02T09:00:00.000Z}
      min={2017-11-02T03:00:00.000Z}
      minuteStep={1}
      mode="datetime"
      onCancel={[Function]}
      onConfirm={[Function]}
      onInit={[Function]}
      title="选择时间"
      visible={false}
    >
      <Popup
        destroy={true}
        direction="bottom"
        lockScroll={true}
        mask={true}
        onMaskClick={[Function]}
        visible={false}
      >
        <Trigger
          disabled={false}
          onClose={[Function]}
          visible={false}
        >
          <Mask
            color="black"
            destroy={true}
            mountContainer={[Function]}
            onClick={[Function]}
            opacity="normal"
            visible={false}
          >
            <Transition
              destroy={true}
              nodeRef={null}
              tranisitionName="za-fade"
              visible={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={true}
                nodeRef={
                  Object {
                    "current": undefined,
                  }
                }
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                unmountOnExit={true}
              />
            </Transition>
          </Mask>
          <Transition
            destroy={true}
            nodeRef={null}
            onEnter={[Function]}
            onLeaveEnd={[Function]}
            tranisitionName="za-move-up"
            visible={false}
          >
            <Transition
              addEndListener={[Function]}
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={true}
              nodeRef={
                Object {
                  "current": undefined,
                }
              }
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              unmountOnExit={true}
            />
          </Transition>
        </Trigger>
      </Popup>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect disabled 1`] = `
<DateSelect
  disabled={true}
  hasArrow={true}
  minuteStep={1}
  mode="date"
  onCancel={[Function]}
  value={2019-04-23T00:00:00.000Z}
>
  <div
    className="za-date-select za-date-select--disabled"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2019-04-23"
    />
    <div
      className="za-date-select__input"
    >
      <div
        className="za-date-select__value"
      >
        2019-04-23
      </div>
    </div>
    <div
      className="za-date-select__arrow"
    />
    <DatePicker
      maskClosable={true}
      minuteStep={1}
      mode="date"
      onCancel={[Function]}
      onConfirm={[Function]}
      onInit={[Function]}
      value={2019-04-23T00:00:00.000Z}
      visible={false}
    >
      <Popup
        destroy={true}
        direction="bottom"
        lockScroll={true}
        mask={true}
        onMaskClick={[Function]}
        visible={false}
      >
        <Trigger
          disabled={false}
          onClose={[Function]}
          visible={false}
        >
          <Mask
            color="black"
            destroy={true}
            mountContainer={[Function]}
            onClick={[Function]}
            opacity="normal"
            visible={false}
          >
            <Transition
              destroy={true}
              nodeRef={null}
              tranisitionName="za-fade"
              visible={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={true}
                nodeRef={
                  Object {
                    "current": undefined,
                  }
                }
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                unmountOnExit={true}
              />
            </Transition>
          </Mask>
          <Transition
            destroy={true}
            nodeRef={null}
            onEnter={[Function]}
            onLeaveEnd={[Function]}
            tranisitionName="za-move-up"
            visible={false}
          >
            <Transition
              addEndListener={[Function]}
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={true}
              nodeRef={
                Object {
                  "current": undefined,
                }
              }
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              unmountOnExit={true}
            />
          </Transition>
        </Trigger>
      </Popup>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect time 1`] = `
<DateSelect
  defaultValue={2017-11-03T07:00:00.000Z}
  disabled={false}
  hasArrow={true}
  minuteStep={15}
  mode="time"
  onCancel={[Function]}
  placeholder="请选择时间"
  title="选择时间"
>
  <div
    className="za-date-select za-date-select--placeholder"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="16:48"
    />
    <div
      className="za-date-select__input"
    >
      <div
        className="za-date-select__value"
      >
        16:48
      </div>
    </div>
    <div
      className="za-date-select__arrow"
    />
    <DatePicker
      defaultValue={2017-11-03T07:00:00.000Z}
      maskClosable={true}
      minuteStep={15}
      mode="time"
      onCancel={[Function]}
      onConfirm={[Function]}
      onInit={[Function]}
      title="选择时间"
      visible={false}
    >
      <Popup
        destroy={true}
        direction="bottom"
        lockScroll={true}
        mask={true}
        onMaskClick={[Function]}
        visible={false}
      >
        <Trigger
          disabled={false}
          onClose={[Function]}
          visible={false}
        >
          <Mask
            color="black"
            destroy={true}
            mountContainer={[Function]}
            onClick={[Function]}
            opacity="normal"
            visible={false}
          >
            <Transition
              destroy={true}
              nodeRef={null}
              tranisitionName="za-fade"
              visible={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={true}
                nodeRef={
                  Object {
                    "current": undefined,
                  }
                }
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                unmountOnExit={true}
              />
            </Transition>
          </Mask>
          <Transition
            destroy={true}
            nodeRef={null}
            onEnter={[Function]}
            onLeaveEnd={[Function]}
            tranisitionName="za-move-up"
            visible={false}
          >
            <Transition
              addEndListener={[Function]}
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={true}
              nodeRef={
                Object {
                  "current": undefined,
                }
              }
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              unmountOnExit={true}
            />
          </Transition>
        </Trigger>
      </Popup>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect trigger visible 1`] = `
<DateSelect
  defaultValue={2019-04-23T00:00:00.000Z}
  disabled={false}
  hasArrow={true}
  minuteStep={1}
  mode="date"
  onCancel={[Function]}
>
  <div
    className="za-date-select za-date-select--placeholder"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2022-10-25"
    />
    <div
      className="za-date-select__input"
    >
      <div
        className="za-date-select__value"
      >
        2022-10-25
      </div>
    </div>
    <div
      className="za-date-select__arrow"
    />
    <DatePicker
      defaultValue={2019-04-23T00:00:00.000Z}
      maskClosable={true}
      minuteStep={1}
      mode="date"
      onCancel={[Function]}
      onConfirm={[Function]}
      onInit={[Function]}
      visible={false}
    >
      <Popup
        destroy={true}
        direction="bottom"
        lockScroll={true}
        mask={true}
        onMaskClick={[Function]}
        visible={false}
      >
        <Trigger
          disabled={false}
          onClose={[Function]}
          visible={false}
        >
          <Mask
            color="black"
            destroy={true}
            mountContainer={[Function]}
            onClick={[Function]}
            opacity="normal"
            visible={false}
          >
            <Transition
              destroy={true}
              nodeRef={null}
              tranisitionName="za-fade"
              visible={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={true}
                nodeRef={
                  Object {
                    "current": undefined,
                  }
                }
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                unmountOnExit={true}
              />
            </Transition>
          </Mask>
          <Transition
            destroy={true}
            nodeRef={null}
            onEnter={[Function]}
            onLeaveEnd={[Function]}
            tranisitionName="za-move-up"
            visible={false}
          >
            <Transition
              addEndListener={[Function]}
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={true}
              nodeRef={
                Object {
                  "current": undefined,
                }
              }
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              unmountOnExit={true}
            />
          </Transition>
        </Trigger>
      </Popup>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect wheelDefaultValue 1`] = `
<DateSelect
  disabled={false}
  hasArrow={true}
  minuteStep={1}
  mode="date"
  onCancel={[Function]}
  placeholder="请选择日期"
  title="选择日期"
  wheelDefaultValue={2017-11-03T10:00:00.000Z}
>
  <div
    className="za-date-select za-date-select--placeholder"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2022-10-25"
    />
    <div
      className="za-date-select__input"
    >
      <div
        className="za-date-select__value"
      >
        2022-10-25
      </div>
    </div>
    <div
      className="za-date-select__arrow"
    />
    <DatePicker
      maskClosable={true}
      minuteStep={1}
      mode="date"
      onCancel={[Function]}
      onConfirm={[Function]}
      onInit={[Function]}
      title="选择日期"
      visible={false}
      wheelDefaultValue={2017-11-03T10:00:00.000Z}
    >
      <Popup
        destroy={true}
        direction="bottom"
        lockScroll={true}
        mask={true}
        onMaskClick={[Function]}
        visible={false}
      >
        <Trigger
          disabled={false}
          onClose={[Function]}
          visible={false}
        >
          <Mask
            color="black"
            destroy={true}
            mountContainer={[Function]}
            onClick={[Function]}
            opacity="normal"
            visible={false}
          >
            <Transition
              destroy={true}
              nodeRef={null}
              tranisitionName="za-fade"
              visible={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={true}
                nodeRef={
                  Object {
                    "current": undefined,
                  }
                }
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                unmountOnExit={true}
              />
            </Transition>
          </Mask>
          <Transition
            destroy={true}
            nodeRef={null}
            onEnter={[Function]}
            onLeaveEnd={[Function]}
            tranisitionName="za-move-up"
            visible={false}
          >
            <Transition
              addEndListener={[Function]}
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={true}
              nodeRef={
                Object {
                  "current": undefined,
                }
              }
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              unmountOnExit={true}
            />
          </Transition>
        </Trigger>
      </Popup>
    </DatePicker>
  </div>
</DateSelect>
`;

exports[`DateSelect DateSelect year 1`] = `
<DateSelect
  disabled={false}
  hasArrow={true}
  minuteStep={1}
  mode="year"
  onCancel={[Function]}
  placeholder="请选择年份"
  title="选择年份"
  value="2017"
>
  <div
    className="za-date-select"
    onClick={[Function]}
  >
    <input
      type="hidden"
      value="2017"
    />
    <div
      className="za-date-select__input"
    >
      <div
        className="za-date-select__value"
      >
        2017
      </div>
    </div>
    <div
      className="za-date-select__arrow"
    />
    <DatePicker
      maskClosable={true}
      minuteStep={1}
      mode="year"
      onCancel={[Function]}
      onConfirm={[Function]}
      onInit={[Function]}
      title="选择年份"
      value="2017"
      visible={false}
    >
      <Popup
        destroy={true}
        direction="bottom"
        lockScroll={true}
        mask={true}
        onMaskClick={[Function]}
        visible={false}
      >
        <Trigger
          disabled={false}
          onClose={[Function]}
          visible={false}
        >
          <Mask
            color="black"
            destroy={true}
            mountContainer={[Function]}
            onClick={[Function]}
            opacity="normal"
            visible={false}
          >
            <Transition
              destroy={true}
              nodeRef={null}
              tranisitionName="za-fade"
              visible={false}
            >
              <Transition
                addEndListener={[Function]}
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={true}
                nodeRef={
                  Object {
                    "current": undefined,
                  }
                }
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                unmountOnExit={true}
              />
            </Transition>
          </Mask>
          <Transition
            destroy={true}
            nodeRef={null}
            onEnter={[Function]}
            onLeaveEnd={[Function]}
            tranisitionName="za-move-up"
            visible={false}
          >
            <Transition
              addEndListener={[Function]}
              appear={false}
              enter={true}
              exit={true}
              in={false}
              mountOnEnter={true}
              nodeRef={
                Object {
                  "current": undefined,
                }
              }
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              unmountOnExit={true}
            />
          </Transition>
        </Trigger>
      </Popup>
    </DatePicker>
  </div>
</DateSelect>
`;
